--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Header -->
     <header class="border-b border-slate-800 bg-slate-950/90">
       <div class="max-w-4xl mx-auto px-4 h-16 flex items-center justify-between">
+        <!-- Logo / left side -->
         <div class="flex items-center gap-2">
           <div class="h-9 w-9 rounded-2xl bg-emerald-400 flex items-center justify-center font-bold text-slate-950 text-lg">
             PB
@@ -21,9 +22,16 @@
             <span class="text-[11px] text-slate-400 uppercase tracking-[0.15em]">Permit Automation</span>
           </div>
         </div>
-        <a href="#waitlist" class="rounded-full bg-emerald-400 px-3 py-1.5 text-xs font-semibold text-slate-950 hover:bg-emerald-300">
-          Join waitlist
-        </a>
+
+        <!-- Right side nav -->
+        <div class="flex items-center gap-3 text-xs">
+          <a href="login.html" class="text-slate-300 hover:text-white">
+            Log in
+          </a>
+          <a href="signup.html" class="rounded-full bg-emerald-400 px-3 py-1.5 font-semibold text-slate-950 hover:bg-emerald-300">
+            Create account
+          </a>
+        </div>
       </div>
     </header>
 
