--- a/login.html
+++ b/login.html
@@ -2,102 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Log in – PermitBot Pro</title>
+  <title>Dashboard – PermitBot Pro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Log in to PermitBot Pro to manage permit packets and automate paperwork." />
+  <meta name="description" content="Manage permit packets with PermitBot Pro." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-950 text-slate-50 antialiased">
   <div class="min-h-screen flex flex-col">
     <!-- Header -->
     <header class="border-b border-slate-800 bg-slate-950/90">
-      <div class="max-w-md mx-auto px-4 h-16 flex items-center justify-between">
+      <div class="max-w-5xl mx-auto px-4 h-16 flex items-center justify-between">
         <a href="index.html" class="flex items-center gap-2">
           <div class="h-9 w-9 rounded-2xl bg-emerald-400 flex items-center justify-center font-bold text-slate-950 text-lg">
             PB
           </div>
           <div class="flex flex-col leading-tight">
             <span class="font-semibold text-sm tracking-tight">PermitBot Pro</span>
-            <span class="text-[11px] text-slate-400 uppercase tracking-[0.15em]">Permit Automation</span>
+            <span class="text-[11px] text-slate-400 uppercase tracking-[0.15em]">Permit Dashboard</span>
           </div>
         </a>
-        <a href="signup.html" class="text-xs text-slate-300 hover:text-white">
-          Create account
-        </a>
+        <div class="flex items-center gap-3 text-xs">
+          <span class="hidden sm:inline text-slate-400">Early access workspace</span>
+          <a href="login.html" class="rounded-full border border-slate-700 px-3 py-1.5 text-slate-200 hover:border-emerald-400/70">
+            Log out
+          </a>
+        </div>
       </div>
     </header>
 
     <!-- Main -->
-    <main class="flex-1 flex items-center justify-center px-4 py-10">
-      <div class="w-full max-w-md">
-        <div class="mb-6">
-          <h1 class="text-2xl font-semibold text-white">Log in</h1>
-          <p class="mt-1 text-sm text-slate-300">
-            Access your projects and permit packets. Don’t have an account yet?
-            <a href="signup.html" class="text-emerald-400 hover:text-emerald-300">Create one here.</a>
+    <main class="flex-1">
+      <div class="max-w-5xl mx-auto px-4 py-8 space-y-6">
+        <section>
+          <h1 class="text-2xl font-semibold text-white">Dashboard</h1>
+          <p class="mt-1 text-sm text-slate-300 max-w-xl">
+            This is your early access dashboard. You can customize this page to show new permit packet forms,
+            recent jobs, or anything else you want.
           </p>
-        </div>
+        </section>
 
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-5">
-          <!-- NOTE: action is a placeholder for now -->
-          <form action="#" method="POST" class="space-y-4 text-sm">
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Email</label>
-              <input
-                type="email"
-                name="email"
-                placeholder="you@company.com"
-                required
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-              />
-            </div>
-
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Password</label>
-              <input
-                type="password"
-                name="password"
-                placeholder="••••••••"
-                required
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-              />
-            </div>
-
-            <div class="flex items-center justify-between">
-              <label class="flex items-center gap-2 text-xs text-slate-300">
-                <input type="checkbox" class="h-3 w-3 rounded border-slate-600 bg-slate-950" />
-                <span>Remember me</span>
-              </label>
-              <button type="button" class="text-[11px] text-slate-400 hover:text-slate-200">
-                Forgot password?
-              </button>
-            </div>
-
-            <button
-              type="submit"
-              class="w-full rounded-full bg-emerald-400 px-4 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300 transition"
-            >
-              Log in
-            </button>
-
-            <p class="text-[11px] text-slate-500">
-              This is a visual login screen only for now. Hook it up to a real auth service
-              (Supabase, Firebase Auth, Clerk, Auth0, etc.) when you’re ready.
+        <!-- Example card you can replace -->
+        <section class="grid md:grid-cols-2 gap-4">
+          <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-5 text-sm">
+            <h2 class="text-sm font-semibold text-white mb-2">Next step: New permit packet</h2>
+            <p class="text-slate-300 mb-3">
+              You can add a form here that collects parcel, jurisdiction, and project type and either:
             </p>
-          </form>
-        </div>
+            <ul class="list-disc list-inside text-xs text-slate-300 space-y-1">
+              <li>Sends the data to Formspree (like your waitlist form), or</li>
+              <li>Later, calls a backend API that runs the AI engine.</li>
+            </ul>
+          </div>
 
-        <div class="mt-6 text-center text-xs text-slate-500">
-          <a href="index.html" class="hover:text-slate-200">← Back to home</a>
-        </div>
+          <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-5 text-xs text-slate-300">
+            <h2 class="text-sm font-semibold text-white mb-2">Ideas to add here</h2>
+            <ul class="list-disc list-inside space-y-1">
+              <li>“New permit packet” button + form</li>
+              <li>Table of recent jobs</li>
+              <li>Status tags (Generated, In review, etc.)</li>
+              <li>Notes about which jurisdictions you currently support</li>
+            </ul>
+          </div>
+        </section>
       </div>
     </main>
 
     <!-- Footer -->
     <footer class="border-t border-slate-800">
-      <div class="max-w-md mx-auto px-4 py-4 flex items-center justify-between text-[11px] text-slate-500">
-        <span>© <span id="year"></span> PermitBot Pro</span>
-        <span>Florida first.</span>
+      <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-500">
+        <span>© <span id="year"></span> PermitBot Pro.</span>
+        <span>Early access dashboard.</span>
       </div>
     </footer>
   </div>
