--- a/signup.html
+++ b/signup.html
@@ -2,140 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Create account – PermitBot Pro</title>
+  <title>Sign Up – PermitBot Pro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Create a PermitBot Pro account to start automating permit paperwork." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-950 text-slate-50 antialiased">
-  <div class="min-h-screen flex flex-col">
-    <!-- Header -->
-    <header class="border-b border-slate-800 bg-slate-950/90">
-      <div class="max-w-md mx-auto px-4 h-16 flex items-center justify-between">
-        <a href="index.html" class="flex items-center gap-2">
-          <div class="h-9 w-9 rounded-2xl bg-emerald-400 flex items-center justify-center font-bold text-slate-950 text-lg">
-            PB
-          </div>
-          <div class="flex flex-col leading-tight">
-            <span class="font-semibold text-sm tracking-tight">PermitBot Pro</span>
-            <span class="text-[11px] text-slate-400 uppercase tracking-[0.15em]">Permit Automation</span>
-          </div>
-        </a>
-        <a href="login.html" class="text-xs text-slate-300 hover:text-white">
-          Log in
-        </a>
+
+<body class="bg-slate-950 text-slate-50 antialiased min-h-screen flex items-center justify-center px-4">
+  <div class="w-full max-w-md bg-slate-900/70 border border-slate-800 rounded-2xl p-6">
+    <h1 class="text-xl font-semibold mb-4 text-white text-center">Create your PermitBot Pro account</h1>
+
+    <form id="signup-form" class="space-y-4">
+      <div>
+        <label class="text-sm text-slate-300">Email</label>
+        <input id="signup-email" type="email" class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-white" placeholder="you@example.com" />
       </div>
-    </header>
 
-    <!-- Main -->
-    <main class="flex-1 flex items-center justify-center px-4 py-10">
-      <div class="w-full max-w-md">
-        <div class="mb-6">
-          <h1 class="text-2xl font-semibold text-white">Create your account</h1>
-          <p class="mt-1 text-sm text-slate-300">
-            Set up a PermitBot Pro account so you’re ready when we open up the app.
-          </p>
-        </div>
-
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-5">
-          <!-- NOTE: action is a placeholder for now -->
-          <form action="#" method="POST" class="space-y-4 text-sm">
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Full name</label>
-              <input
-                type="text"
-                name="name"
-                placeholder="Jane Doe"
-                required
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-              />
-            </div>
-
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Work email</label>
-              <input
-                type="email"
-                name="email"
-                placeholder="you@company.com"
-                required
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-              />
-            </div>
-
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Company / role</label>
-              <input
-                type="text"
-                name="company_role"
-                placeholder="GC, PM, engineer, owner..."
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-              />
-            </div>
-
-            <div class="grid sm:grid-cols-2 gap-3">
-              <div>
-                <label class="block text-xs text-slate-200 mb-1">Password</label>
-                <input
-                  type="password"
-                  name="password"
-                  placeholder="••••••••"
-                  required
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-                />
-              </div>
-              <div>
-                <label class="block text-xs text-slate-200 mb-1">Confirm password</label>
-                <input
-                  type="password"
-                  name="password_confirm"
-                  placeholder="••••••••"
-                  required
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-emerald-400/70"
-                />
-              </div>
-            </div>
-
-            <div class="flex items-start gap-2 text-xs text-slate-300">
-              <input type="checkbox" required class="mt-0.5 h-3 w-3 rounded border-slate-600 bg-slate-950" />
-              <span>
-                I agree to receive emails about PermitBot Pro and understand this is an early-access / pre-release product.
-              </span>
-            </div>
-
-            <button
-              type="submit"
-              class="w-full rounded-full bg-emerald-400 px-4 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300 transition"
-            >
-              Create account
-            </button>
-
-            <p class="text-[11px] text-slate-500">
-              This form is a placeholder. When you’re ready, connect it to a real auth backend
-              (Supabase, Firebase Auth, Clerk, Auth0, etc.) so accounts are stored securely.
-            </p>
-          </form>
-        </div>
-
-        <div class="mt-6 text-center text-xs text-slate-500">
-          Already have an account?
-          <a href="login.html" class="text-emerald-400 hover:text-emerald-300">Log in</a>
-          ·
-          <a href="index.html" class="hover:text-slate-200">Back to home</a>
-        </div>
+      <div>
+        <label class="text-sm text-slate-300">Password</label>
+        <input id="signup-password" type="password" class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-white" placeholder="••••••••" />
       </div>
-    </main>
 
-    <!-- Footer -->
-    <footer class="border-t border-slate-800">
-      <div class="max-w-md mx-auto px-4 py-4 flex items-center justify-between text-[11px] text-slate-500">
-        <span>© <span id="year"></span> PermitBot Pro</span>
-        <span>“TurboTax for permits”.</span>
-      </div>
-    </footer>
+      <button type="submit"
+        class="w-full mt-4 bg-emerald-400 text-slate-900 font-semibold py-2 rounded-full hover:bg-emerald-300">
+        Sign Up
+      </button>
+    </form>
+
+    <p class="text-center text-xs text-slate-400 mt-4">
+      Already have an account?
+      <a href="login.html" class="text-emerald-400 hover:underline">Log in</a>
+    </p>
   </div>
 
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById("signup-form").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const email = document.getElementById("signup-email").value.trim();
+      const password = document.getElementById("signup-password").value.trim();
+
+      if (!email || !password) {
+        alert("Please enter both email and password.");
+        return;
+      }
+
+      // Fake signup: Just send them to login for now
+      window.location.href = "login.html";
+    });
   </script>
 </body>
 </html>
