--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
           </div>
         </a>
         <div class="flex items-center gap-3 text-xs">
-          <span class="hidden sm:inline text-slate-400">Early access workspace</span>
+          <span class="hidden sm:inline text-slate-400">Volusia / Flagler early access</span>
           <button
             onclick="logout()"
             class="rounded-full border border-slate-700 px-3 py-1.5 text-slate-200 hover:border-emerald-400/70">
@@ -41,8 +41,8 @@
         <section>
           <h1 class="text-2xl font-semibold text-white">Dashboard</h1>
           <p class="mt-1 text-sm text-slate-300 max-w-xl">
-            Use this early access dashboard to ask AI which permits/forms you likely need for a job.
-            Later, this will tie into auto-filled PDFs and saved projects.
+            Use this dashboard to ask AI which permits/forms and civil/site documents you likely need
+            for a job in Volusia / Flagler and nearby cities. Then save the job to your account.
           </p>
         </section>
 
@@ -57,15 +57,23 @@
             <div class="grid sm:grid-cols-2 gap-3">
               <div>
                 <label class="block text-xs text-slate-200 mb-1">Jurisdiction *</label>
-                <input id="ai-jurisdiction"
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
-                  placeholder="Palm Coast, Volusia County, Daytona Beach..." />
+                <select id="ai-jurisdiction"
+                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100">
+                  <option value="">Choose jurisdiction…</option>
+                  <option>Volusia County</option>
+                  <option>Flagler County</option>
+                  <option>Daytona Beach</option>
+                  <option>Ormond Beach</option>
+                  <option>Palm Coast</option>
+                  <option>Port Orange</option>
+                  <option>New Smyrna Beach</option>
+                </select>
               </div>
               <div>
                 <label class="block text-xs text-slate-200 mb-1">Project type *</label>
                 <input id="ai-project-type"
                   class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
-                  placeholder="SFR – New build, pool, TI, etc." />
+                  placeholder="SFR – New build, pool, addition, TI, etc." />
               </div>
             </div>
 
@@ -73,7 +81,7 @@
               <label class="block text-xs text-slate-200 mb-1">Parcel or address (optional)</label>
               <input id="ai-parcel"
                 class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
-                placeholder="25 Pine Grove Dr, Palm Coast, FL or parcel ID" />
+                placeholder="Parcel ID or address" />
             </div>
 
             <div>
@@ -87,25 +95,55 @@
               <label class="block text-xs text-slate-200 mb-1">Extra context (optional)</label>
               <textarea id="ai-extra" rows="3"
                 class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
-                placeholder="City water/sewer or well/septic, flood zone, special conditions, etc."></textarea>
+                placeholder="City water/sewer or well/septic, flood zone, wetlands, corner lot, etc."></textarea>
             </div>
 
-            <button
-              onclick="runPermitAI()"
-              class="mt-2 rounded-full bg-emerald-400 px-4 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300">
-              Ask AI
-            </button>
-            <p class="text-[11px] text-slate-500">
-              This calls your /api/ai-permit-suggest endpoint using your OpenAI key on Vercel.
-            </p>
+            <div class="flex flex-wrap gap-2 items-center mt-2">
+              <button
+                onclick="runPermitAI()"
+                class="rounded-full bg-emerald-400 px-4 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300">
+                Ask AI
+              </button>
+              <button
+                onclick="saveJob()"
+                class="rounded-full border border-slate-700 px-4 py-2 text-sm font-semibold text-slate-200 hover:border-emerald-400/70">
+                Save Job
+              </button>
+              <span id="save-status" class="text-[11px] text-slate-400"></span>
+            </div>
+          </div>
+        </section>
+
+        <!-- AI Result section -->
+        <section class="space-y-3">
+          <h2 class="text-sm font-semibold text-slate-200">AI Result</h2>
+
+          <!-- Summary -->
+          <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-4">
+            <p class="text-xs text-slate-400 mb-1">Interpretation</p>
+            <p id="summary-jurisdiction" class="text-sm text-slate-100 mb-1">–</p>
+            <p id="summary-project" class="text-xs text-slate-300 mb-2">–</p>
+            <p id="summary-notes" class="text-xs text-slate-400">Run AI to see notes.</p>
           </div>
 
-          <!-- Output -->
+          <!-- Categories -->
+          <div class="grid md:grid-cols-2 gap-3" id="categories-container">
+            <!-- JS will inject cards here -->
+          </div>
+
+          <!-- Recommended order -->
           <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-4">
-            <h3 class="text-sm font-semibold text-white mb-1">AI output</h3>
-            <pre id="ai-output" class="text-xs text-slate-300 whitespace-pre-wrap">
-Fill out the fields above and click “Ask AI” to see suggested forms here.
-            </pre>
+            <h3 class="text-xs font-semibold text-slate-200 mb-1">Suggested order of attack</h3>
+            <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-300 space-y-1">
+            </ol>
+          </div>
+        </section>
+
+        <!-- Saved jobs -->
+        <section class="space-y-2">
+          <h2 class="text-sm font-semibold text-slate-200">Recent jobs</h2>
+          <div id="jobs-list" class="space-y-2 text-xs text-slate-300">
+            <p class="text-slate-500 text-xs">No jobs saved yet.</p>
           </div>
         </section>
       </div>
@@ -115,7 +153,7 @@ Fill out the fields above and click “Ask AI” to see suggested forms here.
     <footer class="border-t border-slate-800">
       <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-500">
         <span>© <span id="year"></span> PermitBot Pro.</span>
-        <span>Early access dashboard.</span>
+        <span>Volusia / Flagler early access.</span>
       </div>
     </footer>
   </div>
@@ -123,18 +161,20 @@ Fill out the fields above and click “Ask AI” to see suggested forms here.
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Supabase auth setup
+    // Supabase config (same as login/signup)
     const SUPABASE_URL = "https://cwsktitrhphppjltnquj.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN3c2t0aXRyaHBocHBqbHRucXVqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM0MTM4OTMsImV4cCI6MjA3ODk4OTg5M30.4eMRLpadUbS_FEyBH8bsYqsBGX65kUI16WXKAfFXfus";
 
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    let lastAIResult = null;
 
     async function requireAuth() {
-      const { data, error } = await supabaseClient.auth.getSession();
+      const { data } = await supabaseClient.auth.getSession();
       const session = data?.session;
-
       if (!session) {
         window.location.href = "login.html";
+      } else {
+        loadJobs();
       }
     }
 
@@ -143,10 +183,10 @@ Fill out the fields above and click “Ask AI” to see suggested forms here.
       window.location.href = "login.html";
     }
 
-    // Run auth check on load
+    // Call on load
     requireAuth();
 
-    // Existing AI call
+    // Run AI
     async function runPermitAI() {
       const payload = {
         parcel_or_address: document.getElementById("ai-parcel").value,
@@ -156,14 +196,24 @@ Fill out the fields above and click “Ask AI” to see suggested forms here.
         extra_context: document.getElementById("ai-extra").value
       };
 
-      const out = document.getElementById("ai-output");
+      const outSummaryJur = document.getElementById("summary-jurisdiction");
+      const outSummaryProj = document.getElementById("summary-project");
+      const outSummaryNotes = document.getElementById("summary-notes");
+      const categoriesContainer = document.getElementById("categories-container");
+      const orderList = document.getElementById("recommended-order");
 
       if (!payload.jurisdiction || !payload.project_type) {
-        out.textContent = "Please fill at least jurisdiction and project type.";
+        outSummaryJur.textContent = "Please fill jurisdiction and project type.";
+        outSummaryProj.textContent = "";
+        outSummaryNotes.textContent = "";
         return;
       }
 
-      out.textContent = "Thinking…";
+      outSummaryJur.textContent = "Thinking…";
+      outSummaryProj.textContent = "";
+      outSummaryNotes.textContent = "";
+      categoriesContainer.innerHTML = "";
+      orderList.innerHTML = "";
 
       try {
         const res = await fetch("/api/ai-permit-suggest", {
@@ -173,10 +223,170 @@ Fill out the fields above and click “Ask AI” to see suggested forms here.
         });
 
         const data = await res.json();
-        out.textContent = JSON.stringify(data, null, 2);
+        lastAIResult = { payload, data };
+
+        renderAIResult(data);
       } catch (err) {
-        out.textContent = "Error talking to AI: " + err.message;
+        outSummaryJur.textContent = "Error talking to AI.";
+        outSummaryProj.textContent = err.message;
       }
+    }
+
+    function renderAIResult(data) {
+      const outSummaryJur = document.getElementById("summary-jurisdiction");
+      const outSummaryProj = document.getElementById("summary-project");
+      const outSummaryNotes = document.getElementById("summary-notes");
+      const categoriesContainer = document.getElementById("categories-container");
+      const orderList = document.getElementById("recommended-order");
+
+      outSummaryJur.textContent = data.jurisdiction_interpretation || "–";
+      outSummaryProj.textContent = data.project_classification || "–";
+      outSummaryNotes.textContent = data.notes || "–";
+
+      categoriesContainer.innerHTML = "";
+      const packet = data.permit_packet || {};
+
+      const CATEGORY_LABELS = {
+        civil_engineering: "Civil / Site",
+        building_department: "Building Dept",
+        utility_and_fdep: "Utility & FDEP",
+        stormwater: "Stormwater",
+        row_or_driveway: "ROW / Driveway",
+        other_reviews: "Other Reviews"
+      };
+
+      Object.keys(CATEGORY_LABELS).forEach(key => {
+        const items = packet[key] || [];
+        if (!Array.isArray(items) || items.length === 0) return;
+
+        const card = document.createElement("div");
+        card.className = "rounded-2xl border border-slate-800 bg-slate-900/80 p-3";
+
+        const title = document.createElement("h3");
+        title.className = "text-xs font-semibold text-slate-200 mb-2";
+        title.textContent = CATEGORY_LABELS[key];
+        card.appendChild(title);
+
+        const list = document.createElement("ul");
+        list.className = "space-y-1";
+
+        items.forEach(item => {
+          const li = document.createElement("li");
+          li.className = "text-[11px] text-slate-300";
+          li.innerHTML = `
+            <span class="font-semibold text-slate-100">${item.name || "Unnamed item"}</span>
+            <span class="text-slate-500"> (${item.jurisdiction || "Local"})</span><br/>
+            <span class="text-slate-400">${item.description || ""}</span><br/>
+            <span class="text-slate-500">Required if: ${item.required_if || "Typically required"}</span>
+          `;
+          list.appendChild(li);
+        });
+
+        card.appendChild(list);
+        categoriesContainer.appendChild(card);
+      });
+
+      orderList.innerHTML = "";
+      (data.recommended_order || []).forEach(step => {
+        const li = document.createElement("li");
+        li.textContent = step;
+        orderList.appendChild(li);
+      });
+    }
+
+    // Save job to Supabase
+    async function saveJob() {
+      const statusEl = document.getElementById("save-status");
+      statusEl.textContent = "";
+
+      if (!lastAIResult) {
+        statusEl.textContent = "Run AI first before saving.";
+        return;
+      }
+
+      const { payload, data } = lastAIResult;
+
+      const { data: sessionData } = await supabaseClient.auth.getSession();
+      const session = sessionData?.session;
+      if (!session) {
+        statusEl.textContent = "Not logged in.";
+        return;
+      }
+
+      const userId = session.user.id;
+
+      statusEl.textContent = "Saving…";
+
+      const { error } = await supabaseClient
+        .from("jobs")
+        .insert({
+          user_id: userId,
+          jurisdiction: payload.jurisdiction,
+          project_type: payload.project_type,
+          parcel: payload.parcel_or_address || payload.parcel || null,
+          ai_output: data
+        });
+
+      if (error) {
+        statusEl.textContent = "Error saving job.";
+        console.error(error);
+      } else {
+        statusEl.textContent = "Saved.";
+        loadJobs();
+      }
+    }
+
+    // Load recent jobs
+    async function loadJobs() {
+      const listEl = document.getElementById("jobs-list");
+      listEl.innerHTML = "<p class='text-xs text-slate-500'>Loading…</p>";
+
+      const { data: sessionData } = await supabaseClient.auth.getSession();
+      const session = sessionData?.session;
+      if (!session) {
+        listEl.innerHTML = "<p class='text-xs text-slate-500'>Not logged in.</p>";
+        return;
+      }
+
+      const userId = session.user.id;
+
+      const { data, error } = await supabaseClient
+        .from("jobs")
+        .select("id, created_at, jurisdiction, project_type, parcel")
+        .eq("user_id", userId)
+        .order("created_at", { ascending: false })
+        .limit(5);
+
+      if (error) {
+        console.error(error);
+        listEl.innerHTML = "<p class='text-xs text-slate-500'>Error loading jobs.</p>";
+        return;
+      }
+
+      if (!data || data.length === 0) {
+        listEl.innerHTML = "<p class='text-xs text-slate-500'>No jobs saved yet.</p>";
+        return;
+      }
+
+      listEl.innerHTML = "";
+      data.forEach(job => {
+        const div = document.createElement("div");
+        div.className = "rounded-xl border border-slate-800 bg-slate-900/70 px-3 py-2";
+        const created = new Date(job.created_at);
+        div.innerHTML = `
+          <div class="flex justify-between items-center">
+            <div>
+              <div class="text-[11px] font-semibold text-slate-100">${job.project_type || "Job"}</div>
+              <div class="text-[11px] text-slate-400">${job.jurisdiction || ""}</div>
+              <div class="text-[11px] text-slate-500">${job.parcel || ""}</div>
+            </div>
+            <div class="text-[10px] text-slate-500">
+              ${created.toLocaleDateString()}
+            </div>
+          </div>
+        `;
+        listEl.appendChild(div);
+      });
     }
   </script>
 </body>
