--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
           extend: {
             colors: {
               brand: {
-                teal: '#00C8D7',
+                teal: '#00E5FF',   // neon cyan brand blue
                 bg: '#F7F4EC',
                 dark: '#111827'
               }
@@ -37,7 +37,7 @@
           <span class="hidden sm:inline text-slate-600">Volusia / Flagler early access</span>
           <button
             onclick="logout()"
-            class="rounded-full border border-slate-400 px-3 py-1.5 text-brand-dark hover:border-brand-teal">
+            class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-[#00B7CC]">
             Log out
           </button>
         </div>
@@ -112,12 +112,12 @@
             <div class="flex flex-wrap gap-2 items-center mt-2">
               <button
                 onclick="runPermitAI()"
-                class="rounded-full bg-brand-teal px-4 py-2 text-sm font-semibold text-brand-dark hover:bg-brand-teal/90">
+                class="rounded-full bg-brand-teal px-4 py-2 text-sm font-semibold text-brand-dark hover:bg-[#00B7CC]">
                 Ask AI
               </button>
               <button
                 onclick="saveJob()"
-                class="rounded-full border border-slate-400 px-4 py-2 text-sm font-semibold text-brand-dark hover:border-brand-teal">
+                class="rounded-full bg-brand-teal px-4 py-2 text-sm font-semibold text-brand-dark hover:bg-[#00B7CC]">
                 Save Job
               </button>
               <span id="save-status" class="text-[11px] text-slate-600"></span>
@@ -134,7 +134,9 @@
             <p class="text-xs text-slate-600 mb-1">Interpretation</p>
             <p id="summary-jurisdiction" class="text-sm text-brand-dark mb-1">–</p>
             <p id="summary-project" class="text-xs text-slate-700 mb-2">–</p>
-            <p id="summary-notes" class="text-xs text-slate-600">Fill out the fields above and click “Ask AI”.</p>
+            <p id="summary-notes" class="text-xs text-slate-600">
+              Fill out the fields above and click “Ask AI”.
+            </p>
           </div>
 
           <!-- Categories -->
@@ -344,7 +346,7 @@
       }
     }
 
-    // Load jobs
+    // Load recent jobs
     async function loadJobs() {
       const listEl = document.getElementById("jobs-list");
       listEl.innerHTML = "<p class='text-xs text-slate-500'>Loading…</p>";
