--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
           extend: {
             colors: {
               brand: {
-                teal: '#00C8D7',
-                bg: '#F7F4EC',
-                dark: '#111827'
+                teal: '#00E5FF',   // neon cyan
+                bg: '#F7F4EC',     // background tone
+                dark: '#111827'    // dark text
               }
             }
           }
@@ -34,8 +34,12 @@
         </a>
         <div class="flex items-center gap-3 text-xs">
           <a href="signup.html"
-             class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-brand-teal/90">
+             class="rounded-full border border-slate-400 px-3 py-1.5 text-brand-dark hover:border-brand-teal">
             Sign up
+          </a>
+          <a href="login.html"
+             class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-[#00B7CC]">
+            Log in
           </a>
         </div>
       </div>
@@ -46,6 +50,7 @@
       <div class="w-full max-w-md">
         <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
           <h1 class="text-xl font-semibold mb-2 text-brand-dark text-center">Log in to PermitBot</h1>
+          <div class="h-1 w-20 bg-brand-teal rounded-full mx-auto mb-3"></div>
           <p class="text-xs text-slate-600 mb-4 text-center">
             Access your Volusia / Flagler permit dashboard.
           </p>
@@ -66,7 +71,7 @@
             </div>
 
             <button type="submit"
-                    class="w-full mt-2 bg-brand-teal text-brand-dark font-semibold py-2 rounded-full text-sm hover:bg-brand-teal/90">
+                    class="w-full mt-2 bg-brand-teal text-brand-dark font-semibold py-2 rounded-full text-sm hover:bg-[#00B7CC]">
               Log in
             </button>
           </form>
